[package]
name = "libmonsterengine"
version = "0.1.0"
authors = ["Shogo Otake <shogo.otake@gmail.com>"]
edition = "2018"

[lib]
name = "monsterengine"
crate-type = ["cdylib", "lib"]

[dependencies]
hyper = "0.12.35"
plamo = { path = "../plamo-rs" }

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[profile.release]
lto = true
