[package]
name = "libmonsterengine"
version = "0.1.0"
authors = ["Shogo Otake <shogo.otake@gmail.com>"]
edition = "2018"

[lib]
name = "monsterengine"
crate-type = ["cdylib", "lib"]

[dependencies]
hyper = "0.13.1"
plamo = { path = "../plamo-rs" }
tokio = "0.2.5"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[profile.release]
lto = true
