[package]
name = "libmonsterengine"
version = "0.1.0"
authors = ["Shogo Otake <shogo.otake@gmail.com>"]
license = "MIT"
description = "MonsterEngine is a web server which is desinged for Plamo apps and can be used from various programming languages."
repository = "https://github.com/monsterengine/libmonsterengine"
readme = "README.md"
keywords = ["MonsterEngine", "Plamo"]
categories = ["web-programming"]
edition = "2018"

[lib]
name = "monsterengine"
crate-type = ["cdylib", "lib"]

[dependencies]
hyper = "0.13.1"
plamo = "0.3.0"
tokio = "0.2.5"

[profile.release]
lto = true

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"
